force-app/main/default/objects/Bloom_Approval_Matrix__mdt/Bloom_Approval_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Bloom Approval Matrix</label>
    <pluralLabel>Bloom Approval Matrix</pluralLabel>
</CustomObject>