force-app/main/default/objects/Bloom_Approval_Matrix__mdt/fields/Approver_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_User_Id__c</fullName>
    <label>Approver User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>