force-app/main/default/objects/Bloom_Approval_Matrix__mdt/fields/BCM_Email__c.field-meta.xml
<CustomField>
    <fullName>BCM_Email__c</fullName>
    <label>BCM Email</label>
    <type>Email</type>
</CustomField>