force-app/main/default/objects/Bloom_Approval_Matrix__mdt/fields/BFM_Email__c.field-meta.xml
<CustomField>
    <fullName>BFM_Email__c</fullName>
    <label>BFM Email</label>
    <type>Email</type>
</CustomField>