force-app/main/default/objects/Bloom_Approval_Matrix__mdt/fields/Community_Key__c.field-meta.xml
<CustomField>
    <fullName>Community_Key__c</fullName>
    <label>Community Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>